[workspace.package]
version = "0.0.47"
edition = "2021"
authors = ["RandyMcMillan <randy.lee.mcmillan@gmail.com>"]
description = "mempool.space api interface."
license = "MIT"
readme = "README.md"
repository = "https://github.com/randymcmillan/mempool_space.git"
homepage = "https://github.com/randymcmillan/mempool_space"
documentation = "https://github.com/randymcmillan/mempool_space"
keywords = ["bitcoin", "mempool"]
categories = ["network-programming"]

[package]
name = "mempool_space"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories =  { workspace = true }

[[bin]]
name = "mempool-space"
path = "src/bin/mempool-space.rs"
doc = true

[[bin]]
name = "lightning-search"
path = "src/bin/lightning_search/src/main.rs"
doc = true

[[bin]]
name = "mempool-space_dashboard"
path = "src/bin/mempool-space_dashboard/src/main.rs"
doc = true

[package.metadata.wix]
upgrade-guid = "5D3A3DB4-15D1-47AF-BE84-D3A6F541BB8B"
path-guid = "60912461-41F2-4FD0-BD2E-29E3D03F2AE9"
license = false
eula = false

[dependencies]
anyhow = "1.0.86"
ascii = "1.1.0"
better-panic = "0.3.0"
clap = { version = "4.4.5", features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
#crossterm = "0.28.1"
dirs-next = "2.0.0"
dns-lookup = { version = "1.0.7" }
futures    = { version = "0.3.17", optional = true }
getopts = "0.2.21"
human-panic = "1.2.0"
indicatif = "0.17.8"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.158"
log = "0.4.22"

mockall = { version = "0.10.2" }
multipart = { version = "0.18.0", default-features = false, features = [
  "client",
] }
pretty_assertions = "1.4.0"
ratatui = { version = "0.28.0", features = ["serde", "macros", "all-widgets"] }
ratatui-splash-screen = "0.1.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }

serde = { version = "1.0.205", default-features = false, features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.63"

tokio = { version = "1.12.0", optional = true, features = ["rt-multi-thread", "sync", "time", "macros", "full"] }
tokio-util = "0.7.9"
toml = "0.8.19"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
tui-input = { version = "0.8.0", features = ["serde"] }
ureq = { version = "2.10.1", features = ["json"] }
url = "2.5.2"

[build-dependencies]

[dev-dependencies]

[features]
default = ["async"]
async   = ["futures", "tokio"]

[workspace]
members = [
    #"examples/async_usage",
    #"examples/async_usage_custom_target",
    #"examples/usage",
    "src/bin/lightning_search", "src/bin/mempool-space_dashboard",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "randymcmillan/homebrew-randymcmillan"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
